--- a/sssv.us.yaml
+++ b/sssv.us.yaml
@@ -14,6 +14,7 @@ options:
   enable_ld_alignment_hack: yes
   lib_path: build/lib
   hi_lo_max_distance: 32
+  migrate_rodata_to_functions: no
 segments:
   - name:  header
     type:  header
@@ -347,9 +348,9 @@ segments:
     subsegments:
     - [0x398D0, bin] # CI4 textures
     - [0x39ED0, bin] # CI4 textures
-    - [0x39EF0, bin] # cool cod eyes?
+    - [0x39EF0, bin] # CI4 round eyes
     - [0x3A570, bin] # palette
-    - [0x3A5D0, bin] # eyes tlut
+    - [0x3A5D0, bin] # round eyes palette tlut
     - [0x3A5F0, bin] # different eye textures? I4, 16xXX
     - [0x3C4F0, bin] # palette
     - [0x3C530, rgba16, img/D_01002C60_3C530.rgba16, 32, 32]
@@ -376,7 +377,7 @@ segments:
     - [0x03D4A0, bin] # I4 textures
     - [0x3DB40, bin] # displaylist   D_01004270
     - [0x03DBD8, bin] # displaylist
-    - [0x03DC30, bin] # displaylist
+    - [0x03DC30, bin] # displaylist, D_01004360_3DC30
     - [0x3DC70, bin] # displaylist D_010043A0_3DC70
     - [0x03DD28, bin]
     - [0x03DDE0, bin]
@@ -506,11 +507,14 @@ segments:
     - [0x48CE0, sssv_vtx, data/inc/D_0100F410_48CE0]
     - [0x48DC0, .data, data/D_0100F4F0_48DC0]
     # HELP with 0x8 offset
-    - [0x048E18, bin] # vtx
-    - [0x048F08, bin] # displaylist
-    - [0x048F80, bin] # vtx
-    - [0x049180, bin] # vtx
-    - [0x049250, rgba16, img/objects/turd/turd.rgba16, 16, 16]
+    - [0x48E18, bin] # vtx
+    - [0x48F08, bin] # displaylist
+    - [0x48F80, .data, data/D_0100F8C0_49190]
+    - [0x48F80, sssv_vtx, data/inc/D_0100F6B0_48F80]
+    - [0x49040, sssv_vtx, data/inc/D_0100F770_49040]
+    - [0x490A0, sssv_vtx, data/inc/D_0100F7D0_490A0]
+    - [0x49190] # end of rocket
+    - [0x49250, rgba16, img/objects/turd/turd.rgba16, 16, 16]
     - [0x49450, sssv_vtx, data/inc/D_0100FB80_49450]
     - [0x49520, .data, data/D_0100FC50_49520]
     - [0x495F0, sssv_vtx, data/inc/D_0100FD20_495F0]
@@ -547,7 +551,7 @@ segments:
     - [0x4C0E0, sssv_vtx, data/inc/D_01012810_4C0E0]
     - [0x4C150, sssv_vtx, data/inc/D_01012880_4C150]
     - [0x4C350, sssv_vtx, data/inc/D_01012A80_4C350]
-    - [0x4C450, .data, data/D_01012B80_4C450]
+    - [0x4C450, .data, data/teleporter.D_01012B80_4C450] # teleporter
     - [0x4C530, sssv_vtx, data/inc/D_01012C60_4C530]
     - [0x4C6E0, .data, data/D_01012E10_4C6E0]
     - [0x4C750, sssv_vtx, data/inc/D_01012E80_4C750]
@@ -740,6 +744,7 @@ segments:
     - [0x5A220, .data, data/D_01020950_5A220]
     - [0x5A280, bin] # I4, 128x16, lightning bolt?
     - [0x5A680, bin] # bunch of textures/palettes
+    - [0x5B480, bin] # D_01021BB0 I4
     - [0x5BFA0, bin] # 16x16 I4
     - [0x5C020, bin] # 16x16 I4
     - [0x5C0A0, bin] # 16x16 I4 100, 200, 500
@@ -898,7 +903,7 @@ segments:
     - [0x84760, .data, data/D_05004FD0_84760]
     - [0x84790, rgba16, img/actors/dan/dan1.rgba16, 32, 32]
     - [0x84F90, rgba16, img/actors/dan/dan2.rgba16, 32, 32]
-  - name: data_85790
+  - name: HAVE_A_NICE_DAY
     type: code
     vram: 0x05000000
     start: 0x85790
@@ -919,7 +924,7 @@ segments:
     - [0x87650, sssv_vtx, data/inc/D_05001EC0_87650]
     - [0x87850, sssv_vtx, data/inc/D_050020C0_87850]
     - [0x879A0, .data, data/HAVE_A_NICE_DAY_tree.D_05002210_879A0]
-  - name: data_87B80
+  - name: HONEYMOON_LAGOON
     type: code
     vram: 0x05000000
     start: 0x87B80
@@ -944,7 +949,7 @@ segments:
     - [0x88DF0, sssv_vtx, data/inc/D_05001270_88DF0]
     - [0x88FD0, sssv_vtx, data/inc/D_05001450_88FD0]
     - [0x890C0, .data, data/HONEYMOON_LAGOON_trophy.D_05001540_890C0] # dl # HONEYMOON_LAGOON trophy?
-  - name: data_89260 # intro sequence or just HAVE_A_NICE_DAY?
+  - name: SMASHING_START # intro sequence or just SMASHING_START?
     type: code
     vram: 0x05000000
     start: 0x89260
@@ -1023,7 +1028,7 @@ segments:
     - [0x92980, .data, data/D_05009720_92980] # broken glass?
     - [0x929B0, sssv_vtx, data/inc/D_05009750_929B0]
     - [0x92B60, .data, data/D_05009900_92B60] # heart trophy (?)
-  - name: data_92BF0
+  - name: THE_BATTERY_FARM
     type: code
     vram: 0x05000000
     start: 0x92BF0
@@ -1060,7 +1065,7 @@ segments:
     - [0x962A0, sssv_vtx, data/inc/D_050036B0_962A0]
     - [0x96490, sssv_vtx, data/inc/D_050038A0_96490]
     - [0x96690, .data, data/D_05003AA0_96690] # table
-  - name: data_96790
+  - name: GIVE_A_DOG_A_BONUS
     type: code
     vram: 0x05000000
     start: 0x96790
@@ -1071,7 +1076,7 @@ segments:
     - [0x96B60, sssv_vtx, data/inc/D_050003D0_96B60]
     - [0x96D60, sssv_vtx, data/inc/D_050005D0_96D60]
     - [0x96E80, .data, data/D_050006F0_96E80] # GIVE_A_DOG_A_BONUS torso
-  - name: data_97020 # intro
+  - name: DMA_INTRO
     type: code
     vram: 0x05000000
     start: 0x97020
@@ -1132,7 +1137,7 @@ segments:
     - [0x9CEE0, sssv_vtx, data/inc/D_05005EC0_9CEE0]
     - [0x9D0E0, sssv_vtx, data/inc/D_050060C0_9D0E0]
     - [0x9D190, .data, data/DMA_INTRO_take_two_logo.D_05006170_9D190] # Take Two Interactive Logo
-  - name: data_9E0D0
+  - name: STINKY_SEWERS
     type: code
     vram: 0x05000000
     start: 0x9E0D0
@@ -1150,7 +1155,7 @@ segments:
     - [0x9E940, rgba16, img/objects/turd2/turd2.D_05000870_9E940.rgba16, 16, 16]
     - [0x9EB40, sssv_vtx, data/inc/D_05000A70_9EB40]
     - [0x9EC20, .data, data/D_05000B50_9EC20] # turd
-  - name: data_9ED10
+  - name: RAT_O_MATIC
     type: code
     vram: 0x05000000
     start: 0x9ED10
@@ -1186,7 +1191,7 @@ segments:
     - [0xA0AC0, sssv_vtx, data/inc/D_05001DB0_A0AC0]
     - [0xA0BE0, sssv_vtx, data/inc/D_05001ED0_A0BE0]
     - [0xA0CE0] # waterwheel kind of thing?
-  - name: data_A0E40  # ROCKY_HARD_PLACE
+  - name: ROCKY_HARD_PLACE
     type: code
     vram: 0x05000000
     start: 0xA0E40
@@ -1202,7 +1207,7 @@ segments:
     overlay: yes
     subsegments:
     - [0xA10C0, .rodata, data/D_05000000_A10C0]
-  - name: data_A10D0
+  - name: BIG_CELEBRATION_PARADE # tbd
     type: code
     vram: 0x05000000
     start: 0xA10D0
@@ -1280,7 +1285,7 @@ segments:
     - [0xAA240, sssv_vtx, data/inc/D_05009170_AA240]
     - [0xAA430, sssv_vtx, data/inc/D_05009360_AA430]
     - [0xAA530, .data, data/D_05009460_AA530] # shrink-ray
-  - name: data_AA940 # SOMETHING_FISHY objects
+  - name: SOMETHING_FISHY
     type: code
     vram: 0x05000000
     start: 0xAA940
@@ -1345,7 +1350,7 @@ segments:
     - [0xB0230, .data, data/D_050058F0_B0230] # limpit
     - [0xB0270, sssv_vtx, data/inc/D_05005930_B0270]
     - [0xB0450, .data, data/D_05005B10_B0450] # starfish
-  - name: data_B0490 # HOPPA_CHOPPA
+  - name: HOPPA_CHOPPA
     type: code
     vram: 0x05000000
     start: 0xB0490
@@ -1356,7 +1361,7 @@ segments:
     - [0xB06C0, sssv_vtx, data/inc/D_05000230_B06C0]
     - [0xB08C0, sssv_vtx, data/inc/D_05000430_B08C0]
     - [0xB0A20, .data, data/D_05000590_B0A20] # HOPPA_CHOPPA head?
-  - name: data_B0B90 # PENGUIN_PLAYPEN
+  - name: PENGUIN_PLAYPEN
     type: code
     vram: 0x05000000
     start: 0xB0B90
@@ -1382,7 +1387,7 @@ segments:
     - [0xB2A00, sssv_vtx, data/inc/D_05001E70_B2A00]
     - [0xB2BF0, sssv_vtx, data/inc/D_05002060_B2BF0]
     - [0xB2DA0, .data, data/D_05002210_B2DA0] # PENGUIN_PLAYPEN trophy (musical notes)
-  - name: data_B2ED0 # WALRACE_64
+  - name: WALRACE_64 # WALRACE_64
     type: code
     vram: 0x05000000
     start: 0xB2ED0
@@ -1488,7 +1493,7 @@ segments:
     overlay: yes
     subsegments:
     - [0xB48C0, .rodata, data/D_05000000_B48C0]
-  - name: data_B48D0 # EVOS_ESCAPE
+  - name: EVOS_ESCAPE # EVOS_ESCAPE
     type: code
     vram: 0x05000000
     start: 0xB48D0
@@ -1637,7 +1642,7 @@ segments:
     - [0xBF5C0, sssv_vtx, data/inc/D_05002310_BF5C0]
     - [0xBF730, sssv_vtx, data/inc/D_05002480_BF730]
     - [0xBF820, .data, data/D_05002570_BF820] # HOT_CROSS_BUNS trophy
-  - name: data_BFC40 # PUNCHUP_PYRAMID ?
+  - name: PUNCHUP_PYRAMID
     type: code
     vram: 0x05000000
     start: 0xBFC40
@@ -2577,8 +2582,16 @@ segments:
     - [0x0F4360, bin]
     - [0x0F4490, bin]
     - [0x0F45D0, bin]
-    - [0x0F4720, bin]
-    - [0x0F48B8, bin]
+    - [0xF4720, bin]
+    - [0xF48B0, bin] # texture, tortoise tank?
+    - [0xF4AB0, bin] # palette?
+    - [0xF4AD0, bin] # texture
+    - [0xF4CD0, bin] # ?
+    - [0xF4ED0, bin] # texture, tortoise tank turret?
+    - [0xF50D0, bin] # palette
+    - [0xF50F0, sssv_vtx, data/inc/D_04004090_F50F0]
+    - [0xF51D0, sssv_vtx, data/inc/D_04004170_F51D0]
+    - [0xF5230, .data, data/D_040041D0_F5230]
     - [0xF52A0, .data, data/D_040044B0_F5510]
     - [0xF52A0, sssv_vtx, data/inc/D_04004240_F52A0]
     - [0xF53B0, sssv_vtx, data/inc/D_04004350_F53B0]
@@ -2714,15 +2727,36 @@ segments:
     - [0xFC610, bin] # dl
     - [0xFC660, bin] # texture
     - [0xFCA60, bin] # palette?
-    - [0xFCAA0, bin] # vtx
-    - [0xFCD60, bin] # dl # lower jaw of something?
-    - [0x0FCE70, bin]
-    - [0x0FD120, bin]
-    - [0x0FD220, bin]
-    - [0x0FD2C0, bin]
-    - [0x0FD2E0, bin] # texture + vtx + dl
-    - [0x0FDB10, bin]
-    - [0x0FDF80, bin]
+    - [0xFCAA0, sssv_vtx, data/inc/D_0400BA40_FCAA0]
+    - [0xFCB40, sssv_vtx, data/inc/D_0400BAE0_FCB40]
+    - [0xFCB70, sssv_vtx, data/inc/D_0400BB10_FCB70]
+    - [0xFCC10, sssv_vtx, data/inc/D_0400BBB0_FCC10]
+    - [0xFCD60, .data, data/pirana_head.D_0400BD00_FCD60] # pirana head
+    - [0xFCE70, sssv_vtx, data/inc/D_0400BE10_FCE70]
+    - [0xFCF00, sssv_vtx, data/inc/D_0400BEA0_FCF00]
+    - [0xFCF90, sssv_vtx, data/inc/D_0400BF30_FCF90]
+    - [0xFD020, sssv_vtx, data/inc/D_0400BFC0_FD020]
+    - [0xFD070, .data, data/pirana_jaw.D_0400C010_FD070] # pirana jaw 2
+    - [0xFD120, sssv_vtx, data/inc/D_0400C0C0_FD120]
+    - [0xFD180, sssv_vtx, data/inc/D_0400C120_FD180]
+    - [0xFD1D0, .data, data/pirana_tail.D_0400C170_FD1D0] # pirana tail
+    - [0xFD220, sssv_vtx, data/inc/D_0400C1C0_FD220]
+    - [0xFD260, sssv_vtx, data/inc/D_0400C200_FD260]
+    - [0xFD2A0, .data, data/pirana_eyes.D_0400C240_FD2A0] # pirana eyes
+    - [0xFD2E0, bin] # texture
+    # different animal?
+    - [0xFD4E0, bin] # palette?
+    - [0xFD500, bin] # texture
+    - [0xFD700, bin] # palette?
+    - [0xFD720, bin] # texture?
+    - [0xFD920, bin] # palette
+    - [0xFD940, sssv_vtx, data/inc/D_0400C8E0_FD940]
+    - [0xFDAC0, .data, data/D_0400CA60_FDAC0]
+    - [0xFDB10, sssv_vtx, data/inc/D_0400CAB0_FDB10]
+    - [0xFDCF0, sssv_vtx, data/inc/D_0400CC90_FDCF0]
+    - [0xFDED0, sssv_vtx, data/inc/D_0400CE70_FDED0]
+    - [0xFDF00, .data, data/D_0400CEA0_FDF00] # leg? tail?
+    - [0xFDF80, bin]
     - [0x0FE270, bin]
     - [0x0FE560, bin]
     - [0x0FE7C0, bin]
@@ -2739,7 +2773,7 @@ segments:
     - [0xFF860, sssv_vtx, data/inc/D_0400E800_FF860]
     - [0xFFA60, sssv_vtx, data/inc/D_0400EA00_FFA60]
     - [0xFFBB0, sssv_vtx, data/inc/D_0400EB50_FFBB0]
-    - [0xFFC20, .data, data/D_0400EBC0_FFC20] # displaylist # helicopter thing?
+    - [0xFFC20, .data, data/D_0400EBC0_FFC20] # helicopter thing?
   - name: city_biome
     type: code
     vram: 0x04000000
@@ -3455,7 +3489,7 @@ segments:
   - [0x6370C0, rnc, lang/lang35.dat]
   - [0x637110, rnc, lang/lang36.dat]
   # end of languages
-  - [0x637160, bin, rnc_637160] # 5000 => 115024 # some textures
+  - [0x637160, bin, rnc_637160] # 5000 => 115024 # 28 * 0x100C particles?
   - type:  code
     name:  overlay1
     overlay: yes
@@ -3610,6 +3644,7 @@ segments:
     - [0x725D10, c, overlay2_725D10]
     - [0x72A930, c, overlay2_72A930]
     - [0x72B100, c, overlay2_72B100]
+    - [0x72B800, c, overlay2_72B800]
     - [0x72C680, c, overlay2_72C680]
     - [0x72DE50, c, sssv/animals/mouse]
     - [0x7312E0, c, overlay2_7312E0]
@@ -3632,7 +3667,7 @@ segments:
     - [0x767AC0, c, sssv/overlay2_767AC0]
     - [0x7688B0, c, overlay2_7688B0]
     - [0x7689A0, c, overlay2_7689A0]
-    - [0x768B90, c, sssv/animals/biker_hyena]
+    - [0x768B90, c, sssv/animals/hyena]
     - [0x76BCA0, c, sssv/animals/chameleon]
     - [0x76D850, c, overlay2_76D850]
     - [0x76F7D0, c, overlay2_76F7D0]
@@ -3670,19 +3705,36 @@ segments:
     # .data / .rodata
     - [0x7B1B90, linker, data]
     - [0x7B1B90, bin]
-    - [0x7B3260, bin] # some floats
+    - [0x7B1BA0, .data, overlay2_6A7A80] # D_803A04F0_7B1BA0
+    - [0x7B1BB0, .data, overlay2_6AB090] # D_803A0500_7B1BB0
+    - [0x7B1BC0, bin] # D_803A0510_7B1BC0
+    - [0x7B1BE0, bin] # D_803A0510_7B1BC0
+    - [0x7B1C30, bin] # D_803A0580_7B1C30
+    - [0x7B1C60, .data, overlay2_6B5380] # D_803A05B0_7B1C60
+    - [0x7B1C70, .data, overlay2_6C5570]
+    - [0x7B1C80, .data, sssv/animals/stats] # animal stats (struct089 -> struct035)
+    - [0x7B3250, bin] # padding?
+    - [0x7B3260, bin] # some floats (struct098)
+    - [0x7B32E0, bin]
     - [0x7B3760, bin] # tbd
     - [0x7B3770, bin] # D_803A20C0_7B3770
-    - [0x7B5F70, bin] # D_803A48C0_7B5F70 europe
-    - [0x7B60DC, bin] # D_803A4A2C_7B60DC jungle
-    - [0x7B616C, bin] # D_803A4ABC_7B616C ice
-    - [0x7B61E8, bin] # D_803A4B38_7B61E8 desert
-    - [0x7B6228, bin] # D_803A4B78_7B6228
-    - [0x7B6E20, bin] # D_803A5770_7B6E20
-    - [0x7B6E50, bin] # D_803A57A0_7B6E50
-    - [0x7B6FD8, bin] # D_803A5928_7B6FD8
-    - [0x7B7150, bin] # D_803A5AA0_7B7150  ROM offsets of level displaylists
-    - [0x7B7290, bin] # jump table?
+    - [0x7B3860, bin] # D_803A21B0_7B3860
+    - [0x7B4430, bin]
+    - [0x7B5E50, bin]
+    - [0x7B5E60, bin]
+    - [0x7B5F70, .data, sssv/aidata] # D_803A48C0_7B5F70 europe
+    - [0x7B62E0, bin] # dog
+    - [0x7B65A0, bin] # hippo
+    - [0x7B6780, bin] # lion
+    - [0x7B6A90, bin] # rabbit
+    - [0x7B6BD0, bin] # frog
+    - [0x7B6C10, bin] # overlay2_716900
+    - [0x7B6D60, bin] # parrot
+    - [0x7B6E00, .data, overlay2_72B100]
+    - [0x7B6E10, .data, overlay2_72B800]
+    - [0x7B6E20, .data, overlay2_72C680]
+    - [0x7B73D0, data, sssv/animals/mouse]
+    - [0x7B7550, data, sssv/animals/bear]
     - [0x7B7720, data, overlay2_739290] # D_803A6070_7B7720
     - [0x7B7A60, bin]
     - [0x7B7B20, .data, overlay2_6ED230] # animal sound lookup table?
@@ -3704,14 +3756,13 @@ segments:
     - [0x7C74E0, bin]
     - [0x7C76B0, .data, sssv/credits]
     - [0x7C7960, bin]
+    - [0x7C79C0, bin] # D_803B6310_7C79C0
     - [0x7C79D0, .data, sssv/terminal_background]
     - [0x7C7B00, bin]
     - [0x7C7CB8, bin] # displaylist
     - [0x7C7D68, bin] # displaylist
     - [0x7C7D90, bin]
     - [0x7C7F40, .data, overlay2_7A8A50] # data for overlay2_7A8A50?
-    - [0x7C81E0, bin]
-    - [0x7C86A0, bin]
     - [0x7C86B0, bin] # pointers
     - [0x7C87B8, bin] # pointers to displaylists # 7C87B8
     - [0x7C8880, bin] # D_803B71D0
@@ -3730,7 +3781,7 @@ segments:
     - [0x7CC3B0, rodata, overlay2_6A7A80]
     - [0x7CC3C0, rodata, overlay2_6ACF20]
     - [0x7CC470, rodata, overlay2_6B5380]
-    - [0x7CD454, .rodata, overlay2_6B5380]
+    - [0x7CD384, .rodata, overlay2_6B5380]
     - [0x7CD5B0, rodata, sssv/collision]
     - [0x7CD610, .rodata, overlay2_6CCEF0]
     - [0x7CD664, rodata, overlay2_6CCEF0]
@@ -3757,14 +3808,17 @@ segments:
     - [0x7CE680, rodata, sssv/animals/frog]
     - [0x7CE690, rodata, overlay2_715820]
     - [0x7CE6C0, rodata, overlay2_716900]
+    - [0x7CE764, .rodata, overlay2_716900]
+    - [0x7CE780, rodata, overlay2_716900_cont]
     - [0x7CE7C0, rodata, sssv/animals/parrot]
     - [0x7CE7D0, .rodata, overlay2_725D10]
     - [0x7CE804, rodata, overlay2_725D10]
-    - [0x7CEB70, rodata, overlay2_72B100_tmp] # FIXME force some alignment
+    - [0x7CEB70, rodata, overlay2_725D10_more] # FIXME force some alignment
+    - [0x7CEB80, rodata, overlay2_72B100_pre]
     - [0x7CEBA0, .rodata, overlay2_72B100]
-    - [0x7CEBC8, rodata, overlay2_72B100]
-    - [0x7CEBE0, bin] # FIXME alignment goes wrong around here
-    - [0x7CED50, rodata, overlay2_72B100_cont]
+    - [0x7CEBE0, .rodata, overlay2_72B800] # .rodata, overlay2_72B800] # FIXME alignment goes wrong around here
+    # - [0x7CED50, rodata, overlay2_72B800]
+    - [0x7CEF30, rodata, overlay2_72C680_pre]
     - [0x7CEF60, rodata, overlay2_72C680]
     - [0x7CF050, rodata, sssv/animals/mouse]
     - [0x7CF090, rodata, overlay2_7312E0]
@@ -3782,7 +3836,7 @@ segments:
     - [0x7D0050, .rodata, sssv/hilites]
     - [0x7D0080, .rodata, overlay2_75BC80]
     - [0x7D00A0, rodata, sssv/init]
-    - [0x7D01E0, rodata, sssv/animals/biker_hyena]
+    - [0x7D01E0, rodata, sssv/animals/hyena]
     - [0x7D0220, rodata, overlay2_76D850]
     - [0x7D02B0, rodata, sssv/animals/rat]
     - [0x7D02C0, rodata, overlay2_76F7D0]
